--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 		"preserveConstEnums": true,
 		"resolveJsonModule": true,
 		"declaration": true,
+		"rootDir": "./",
 		"outDir": "./dist/",
 		"target": "es2017",
 		"sourceMap": true
